modified the padding of the body to fix mis-aligned container, fixed issues with case-senstivity of class names

--- a/css/doc.css
+++ b/css/doc.css
@@ -1,5 +1,5 @@
 body {
- 	padding: 60px;
+ 	padding-top: 60px;
 }
 
 @media (max-width: 979px)
